Standardization of all notebooks

--- a/notebooks/Part 2 - Feature engineering and classic ML methods.ipynb
+++ b/notebooks/Part 2 - Feature engineering and classic ML methods.ipynb
@@ -4,77 +4,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1> MotiononSense Dataset : Smartphone Sensor Data </h1>\n",
-    "<h3> Problem definition - predict user's activity based on smartphone sensors data </h3>"
+    "# MotiononSense Dataset\n",
+    "### Problem definition: predict user's activity based on smartphone sensors data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3> Part 2:\n",
-    "<ul>\n",
-    "    <li> Problem definition and possible applications </li>\n",
-    "    <li> Feature extraction/engineering </li>\n",
-    "    <li> Classic ML models - training and statistical evaluation </li>\n",
-    "    <li> Problems and the need for \"real data\" </li>\n",
-    "    </ul>\n",
-    "</h3>"
+    "---\n",
+    "## Part 2:\n",
+    "\n",
+    "* Problem Definition and Possible Applications\n",
+    "* Feature Extraction / Engineering\n",
+    "* Classic ML Models - Training and Statistical Evaluation\n",
+    "* Problems and the Need for \"Real Data\"\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3> Problem definition and applications </h3>"
+    "---\n",
+    "## Problem Definition and Applications\n",
+    "\n",
+    "* Our probelm is predicting user's activity from phone sensors data\n",
+    "* This definition might be too wide, so we limit ourself to predicting 1 of 5 possible activities\n",
+    "* Thus, we can define our problem as multiclass classification, where we can label each data point as <br> sitting, standing, walking, going downstaris or going upstairs \n",
+    "* There are many application for this kind of classification in various fields such as <br> healthcare, intelligence etc. \n",
+    "* We will further discuss some of these applications in later part of our project"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<ul>\n",
-    "    <li> Our probelm is predicting user's activity from phone sensors data </li>\n",
-    "    <li> This definition might be too wide, so we limit ourself to predicting 1 of 5 possible activities </li>\n",
-    "    <li> Thus, we can define our problem as multiclass classification, where we can label each data point as <br>\n",
-    "        sitting, standing, walking, going downstaris or going upstairs </li>\n",
-    "    <li> There are many application for this kind of classification in various fields such as <br>\n",
-    "        healthcare, intelligence etc. </li>\n",
-    "    <li> We will further discuss some of these applications in later part of our project </li>\n",
-    "</ul>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3> Feature extraction/engineering </h3>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "---\n",
+    "## Feature Extraction / Engineering\n",
+    "\n",
     "Our data is a time series - a sequence of measurements over time\n",
-    "<ul>\n",
-    "    <li> Thus, extracting value for a single data point depends on it's context </li> \n",
-    "    <li> But, classic ML algorithms/classifiers predicts output for a single input data point - independent to adjecent input data point </li>\n",
-    "    <li> So, in order to use our data to train classic ML model we will have to encode our features to represent context data </li>\n",
-    "    <li> We will present two different features encoding methods - Sliding-Window and Raw-History </li>\n",
-    "</ul>"
+    "\n",
+    "* Thus, extracting value for a single data point depends on it's context\n",
+    "* But, classic ML algorithms/classifiers predicts output for a single input data point - independent to adjecent input data point\n",
+    "* So, in order to use our data to train classic ML model we will have to encode our features to represent context data \n",
+    "* We will present two different features encoding methods - Sliding-Window and Raw-History"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Sliding Window Features </h4>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Sliding Window Features\n",
+    "\n",
     "<ul>\n",
     "<li> In this method, we will encode each data sample as a concatenation of analytical functions calculated over a predefined size of previous samples </li>\n",
     "<li> For example, here we will use a context size of 10 (calculate over 10 pervious data points) </li>\n",
@@ -418,8 +400,7 @@
     "* For sliding window of 10 samples we are loosing 10 data samples of each experiment\n",
     "* This sums up to 15 \\* 24 \\* 10 = 3600\n",
     "* Indeed in the new data set there are exactly 3600 rows fewer than the origial data set\n",
-    "* Furthermore, the new data set has exactly 12 \\* {num_analytical_function} + label column = 12 \\* 6 + 1 = 73 columns \n",
-    "(12 is the number of features in the original data set)"
+    "* Furthermore, the new data set has exactly 12 \\* {num_analytical_function} + label column = 12 \\* 6 + 1 = 73 columns <br> (12 is the number of features in the original data set)"
    ]
   },
   {
@@ -445,19 +426,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Raw History Features </h4>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<ul>\n",
-    "    <li>In this method, we will simply encode each data sample as a concatenation of the raw features of it's previous x data points </li>\n",
-    "        <li>For example, here we will use a context size of 10. i.e it is aligned with our previous sliding window method, <br>\n",
-    "but instead of calculating aggregation of analytical function over the context features, here we simply encode them as a long vector </li>\n",
-    "    <li> Again, we cannot mix between different expirements who represents different activity label </li>\n",
-    "</ul>"
+    "### Raw History Features\n",
+    "\n",
+    "* In this method, we will simply encode each data sample as a concatenation of the raw features of it's previous x data points\n",
+    "* For example, here we will use a context size of 10. i.e it is aligned with our previous sliding window method, <br> but instead of calculating aggregation of analytical function over the context features, here we simply encode them as a long vector\n",
+    "* Again, we cannot mix between different expirements who represents different activity label"
    ]
   },
   {
@@ -519,16 +492,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b> Sanity check: </b> <br>\n",
-    "<ul>\n",
-    "    <li> There are 15 expirements and 24 participants for each expirement </li>\n",
-    "    <li> For history encoded data with history length of 10 samples we are loosing 10 data samples of each expirement\n",
-    "this sums up to 15 \\* 24 \\* 10 = 3600 </li>\n",
-    "    <li> This sums up to 15 \\* 24 \\* 10 = 3600 </li>\n",
-    "    <li> Indeed in the new data set there are exactly 3600 rows fewer than the origial data set <\\li>\n",
-    "    <li> Furthermore, the new data set has exactly 12 \\* {history_length + 1} + label columns = 12 * (10+1) + 1 = 133 columns <br>\n",
-    "        (addition of one for the original data) </li>\n",
-    "</ul>"
+    "**Sanity check:**\n",
+    "\n",
+    "* There are 15 expirements and 24 participants for each expirement\n",
+    "* For history encoded data with history length of 10 samples we are loosing 10 data samples of each expirement this sums up to 15 \\* 24 \\* 10 = 3600 \n",
+    "* This sums up to 15 \\* 24 \\* 10 = 3600 \n",
+    "* Indeed in the new data set there are exactly 3600 rows fewer than the origial data set <\\li>\n",
+    "* Furthermore, the new data set has exactly 12 \\* {history_length + 1} + label columns = 12 * (10+1) + 1 = 133 columns <br> (addition of one for the original data) "
    ]
   },
   {
@@ -554,19 +524,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3> Classic ML models - training and statistical evaluation </h3>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<ul>\n",
-    "    <li> Now we have two different encodings of our time series data as independent data points. </li>\n",
-    "    <li> We can feed them into an ML model and evaluate the performance of our predictions </li>\n",
-    "    <li> First we will define a class to consolidate the functionality of splitting the data into training,\n",
-    "        development and test sets <br> and performing the evaluation using percision and recall for each activity label </li>\n",
-    "</ul>"
+    "---\n",
+    "## Classic ML Models - Training and Statistical Evaluation\n",
+    "\n",
+    "* Now we have two different encodings of our time series data as independent data points.\n",
+    "* We can feed them into an ML model and evaluate the performance of our predictions \n",
+    "* First we will define a class to consolidate the functionality of splitting the data into training, development and test sets <br> and performing the evaluation using percision and recall for each activity label\n"
    ]
   },
   {
@@ -631,37 +594,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> A few words about our evaluation metrics </h4>"
+    "**A few words about our evaluation metrics**\n",
+    "\n",
+    "* Our evaluation metrics will be precision, recall and their harmonic average the F1 score\n",
+    "* These metrics are much more relevant to our problem compared to the model total accuracy for few reasons. \n",
+    "* First, our problem is imbalanced. We've already seen that the labels walk sit and stand are x2 time more frequent than going up/down stairs \n",
+    "* Second, We also consider our assumption that some activities will be much harder to predict compared to others. <br> i.e separating \"sit\" from \"walk\" should be much easier than separating between \"upstairs\" and \"downstairs\"\n",
+    "* That is why we'll be interested in the model performance for each activity by its own.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<ul>\n",
-    "    <li> Our evaluation metrics will be precision, recall and their harmonic average the F1 score </li>\n",
-    "    <li> These metrics are much more relevant to our problem compared to the model total accuracy for few reasons. </li>\n",
-    "    <li> First, our problem is imbalanced. We've already seen that the labels walk sit and stand are x2 time more frequent than going up/down stairs </li>\n",
-    "    <li> Second, We also consider our assumption that some activities will be much harder to predict compared to others. i.e separating \"sit\" from \"walk\" should be much easier than separating between \"upstairs\" and \"downstairs\" </li>\n",
-    "    <li> That is why we'll be interested in the model performance for each activity by its own.\n",
-    "</ul>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h4> Logistic Regression Model </h4>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<ul>\n",
-    "<li> We will start with a simple linear model and evaluate its performnace using our two different encodings </li>\n",
-    "<li> We will use logistic regression with L2 loss function (MSE), with the default C=1.0 regularization value <br> (which defines our tradeoff between regularization term and actual loss in the loss function)</li>\n",
-    "</ul>"
+    "**Logistic Regression Model**\n",
+    "\n",
+    "* We will start with a simple linear model and evaluate its performnace using our two different encodings\n",
+    "* We will use logistic regression with L2 loss function (MSE), with the default C=1.0 regularization value <br> (which defines our tradeoff between regularization term and actual loss in the loss function)"
    ]
   },
   {
@@ -787,13 +736,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That didn't change much the results so we can keep our previuos regularization rate"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "That didn't change much the results so we can keep our previuos regularization rate\n",
+    "\n",
     "Now we will perform the same analysis over the raw history encoded sample"
    ]
   },
@@ -881,29 +825,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<ul>\n",
-    "<li> We can see that the results of the same classifier with the raw history encoding are much worse compared to the sliding window encoding - even with the relatively \"easy\" to predict activities sit and stand </li>\n",
-    "    <li> This leads to a conclusion that the data is not linearly separable with the raw history encoding, and might be even the same with the sliding window aggregation encoding </li>\n",
-    "    <li> Next, we will try a stronger, non linear model to try and incorporate more complexed relations between our features\n",
-    "</ul>"
+    "* We can see that the results of the same classifier with the raw history encoding are much worse compared to the sliding window encoding - even with the relatively \"easy\" to predict activities sit and stand \n",
+    "* This leads to a conclusion that the data is not linearly separable with the raw history encoding, and might be even the same with the sliding window aggregation encoding \n",
+    "*  Next, we will try a stronger, non linear model to try and incorporate more complexed relations between our features"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Random Forest Classifier </h4>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<ul>\n",
-    "<li> We will evaluate the performance of a non linear random forest model over our two different encoding data sets </li>\n",
-    "    <li> This model can be trained much faster due to options to parallelize the training of independent trees </li>\n",
-    "    <li> We will run few different architectures of number of trees and evaluate them on our validation set </li>\n",
-    "</ul>"
+    "### Random Forest Classifier\n",
+    "\n",
+    "* We will evaluate the performance of a non linear random forest model over our two different encoding data sets \n",
+    "* This model can be trained much faster due to options to parallelize the training of independent trees \n",
+    "* We will run few different architectures of number of trees and evaluate them on our validation set "
    ]
   },
   {
@@ -1231,19 +1166,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<ul>\n",
-    "<li> As we can see the differences due to the number of estimators is pretty much negligible </li>\n",
-    "    <li> Using our sliding window encoding performs slightly better, especially for the upstaris and downstairs labels </li>\n",
-    "    <li> We will choose the more simple model with only 10 tree estimators and the sliding window encoding </li>\n",
-    "    <li> Next, we will anaylize the result of our best model so far over the test set portion we saved to ourselves (random forest with 10 trees using the sliding window encoding) </li>\n",
-    "</ul>"
+    "* As we can see the differences due to the number of estimators is pretty much negligible \n",
+    "* Using our sliding window encoding performs slightly better, especially for the upstaris and downstairs labels \n",
+    "* We will choose the more simple model with only 10 tree estimators and the sliding window encoding\n",
+    "* Next, we will anaylize the result of our best model so far over the test set portion we saved to ourselves (random forest with 10 trees using the sliding window encoding) "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Evaluate best model on the test set </h4>"
+    "**Evaluate best model on the test set**"
    ]
   },
   {
@@ -1291,20 +1224,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3> Problems and the need for \"real data\" </h3>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<ul>\n",
-    "<li> As we can see, even on our left aside test data the performance of the model is too good to be true. </li>\n",
-    "<li> This is a reason to suspect that although we tested our model on data was not used to train it, <b> we are over-fitting to the current data set as a whole </b>  </li>\n",
-    "    <li> We suspect that <b> the generation process of the data was too \"synthetic\" </b>, not represeting \"real world\" data obtained from phone sensors </li>\n",
-    "    <li> We used this experiment framework to <b> extract real data obtained from our activities </b> during the day and labeled them accordingly </li>\n",
-    "    <li> In the next notebook we will present our model performance on our \"real world\" data and try to train more complex models to improve our performance over the real world data </li>\n",
-    "</ul>"
+    "---\n",
+    "## Problems and the Need for \"Real Data\"\n",
+    "\n",
+    "* As we can see, even on our left aside test data the performance of the model is too good to be true.\n",
+    "* This is a reason to suspect that although we tested our model on data was not used to train it, **we are over-fitting to the current data set as a whole**\n",
+    "* We suspect that **the generation process of the data was too \"synthetic\"**, not represeting \"real world\" data obtained from phone sensors\n",
+    "* We used this experiment framework to **extract real data obtained from our activities** during the day and labeled them accordingly \n",
+    "* In the next notebook we will present our model performance on our \"real world\" data and try to train more complex models to improve our performance over the real world data \n"
    ]
   }
  ],
