--- a/notebooks/Part 3 - Neural Models and Evaluating on Real World Data.ipynb
+++ b/notebooks/Part 3 - Neural Models and Evaluating on Real World Data.ipynb
@@ -4,41 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1> MotiononSense Dataset : Smartphone Sensor Data </h1>\n",
-    "<h3> Problem definition - predict user's activity based on smartphone sensors data </h3>"
+    "# MotiononSense Dataset\n",
+    "### Problem definition: predict user's activity based on smartphone sensors data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3> Part 3:\n",
-    "<ul>\n",
-    "    <li> Extracting real world data </li>\n",
-    "    <li> Evaluation on real world data </li>\n",
-    "    <li> Neuronal Models - training and evaluation on real world data </li>\n",
-    "    <li> Final results, conculsions and application </li>\n",
-    "    </ul>\n",
-    "</h3>"
+    "---\n",
+    "## Part 3:\n",
+    "\n",
+    "* Extracting Real World Data \n",
+    "* Evaluation on Real World Data \n",
+    "* Neural Models - Training and Evaluation on Real World Data\n",
+    "* Applicative Predictions Smoothing\n",
+    "* Final Results, Conculsions & Application"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3> Extracting real world data </h3>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<ul>\n",
-    "    <li> We used the <a href=\"https://developer.apple.com/documentation/coremotion/cmdevicemotion\">Core Motion Framework for iOS devices</a> to extract sensors data from our phones </li>\n",
-    "    <li> More details on the app we built can be found in our final document </li>\n",
-    "    <li> We recorded sensors data while performing different activties and extracted labeled data samples </li>\n",
-    "    <li> On the next section we will load our data and use it as a test set to evaluate the performace of our Random Forest model </li>\n",
-    "</ul>"
+    "---\n",
+    "## Extracting Real World Data\n",
+    "\n",
+    "\n",
+    "* We used the [Core Motion Framework for iOS devices](https://developer.apple.com/documentation/coremotion/cmdevicemotion) to extract sensors data from our phones\n",
+    "* More details on the app we built can be found in our final document\n",
+    "* We recorded sensors data while performing different activties and extracted labeled data samples \n",
+    "* On the next section we will load our data and use it as a test set to evaluate the performace of our Random Forest model"
    ]
   },
   {
@@ -118,13 +113,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3> Evaluation real world data </h3>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "---\n",
+    "## Evaluation on Real World Data\n",
+    "\n",
     "Now, we will encode both samples with our Sliding Window encoding, train our Random Forest model over the entire old data and evaluate it's performance on the real world data"
    ]
   },
@@ -324,33 +315,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusions so far:\n",
-    "<ul>\n",
-    "    <li> We excluded the \"jogging\" activity because we didn't perform this activity in the data we created from our app </li>\n",
-    "    <li> As predicted, the results on real world data are much worse compared to results over our original test set </li>\n",
-    "    <li> We are still predicting \"sit\" and \"stand\" activities quite well but our current model is having hard time identifying \"upstairs\" and \"down stairs\" </li>\n",
-    "    <li> Next, we will try to use a stronger, neural models, hoping that it will help us increasing our performance over the real test data\n",
-    "</ul>"
+    "**Conclusions so far:**\n",
+    "\n",
+    "* We excluded the \"jogging\" activity because we didn't perform this activity in the data we created from our app\n",
+    "* As predicted, the results on real world data are much worse compared to results over our original test set\n",
+    "* We are still predicting \"sit\" and \"stand\" activities quite well but our current model is having hard time identifying \"upstairs\" and \"down stairs\"\n",
+    "* Next, we will try to use a stronger, neural models, hoping that it will help us increasing our performance over the real test data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3> Neural Models - Training and Evaluation </h3>"
+    "---\n",
+    "## Neural Models - Training and Evaluation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Encoding for Neural Models\n",
-    "<ul>\n",
-    "    <li> The first model we will try is a simple feed forward network with one hidden layer </li>\n",
-    "    <li> Feed forward nets, like classic ML models, cannot use sequence as input so we will have to use one of our previous encodings </li>\n",
-    "    <li> We will choose our sliding window encoding first, since it out-performed our raw history encoding </li>\n",
-    "    <li> We hope that our model can create a better representation of the data in it's hidden layer and thus increase the generalization ability of the model </li>\n",
-    "</ul>"
+    "**Encoding for Neural Models**\n",
+    "\n",
+    "* The first model we will try is a simple feed forward network with one hidden layer\n",
+    "* Feed forward nets, like classic ML models, cannot use sequence as input so we will have to use one of our previous encodings \n",
+    "* We will choose our sliding window encoding first, since it out-performed our raw history encoding\n",
+    "* We hope that our model can create a better representation of the data in it's hidden layer and thus increase the generalization ability of the model"
    ]
   },
   {
@@ -491,7 +481,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Evaluate results:\n",
+    "**Evaluate results:**\n",
     "* Results for Feed Forward neural network look like the Random Forest ones\n",
     "* Try to add another hidden layer and see if significant improvement occurs"
    ]
@@ -556,7 +546,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Intermediate neural conclusions:\n",
+    "**Intermediate neural conclusions:**\n",
     "* Normal feed forward does not perform much better than random forest\n",
     "* Adding another layer did not improve at all the F1-score\n",
     "* This might be because our sliding window is not an ideal input for time series neural network\n",
