Part 3 completed + New documentation file

--- a/notebooks/Part 3 - Evaluating on Real World Data.ipynb
+++ b/notebooks/Part 3 - Evaluating on Real World Data.ipynb
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,9 +703,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=8)]: Done   6 out of  10 | elapsed:    0.1s remaining:    0.1s\n",
+      "[Parallel(n_jobs=8)]: Done  10 out of  10 | elapsed:    0.1s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---- Printing classification report ----\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        wlk       0.91      0.62      0.74     52652\n",
+      "        sit       0.99      0.70      0.82     35225\n",
+      "        std       0.97      0.97      0.97     36561\n",
+      "        ups       0.50      0.89      0.64     21800\n",
+      "        jog       0.00      0.00      0.00         0\n",
+      "        dws       0.40      0.60      0.48     19547\n",
+      "\n",
+      "avg / total       0.83      0.75      0.76    165785\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.6/site-packages/sklearn/metrics/classification.py:1137: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples.\n",
+      "  'recall', 'true', average, warn_for)\n"
+     ]
+    }
+   ],
    "source": [
     "rf_predictions = rf.predict(X)\n",
     "smooth_rf_predictions = SmoothDataEval.smooth_predictions(rf_predictions, SMOOTH_FACTOR)\n",
