--- a/notebooks/Part 1 - Business Understanding and Data Exploration.ipynb
+++ b/notebooks/Part 1 - Business Understanding and Data Exploration.ipynb
@@ -75,9 +75,9 @@
     "\n",
     "**Gyroscope:**\n",
     "\n",
-    "* The gyroscope helps the accelerometer out with understanding which a phone is orientated\n",
+    "* The gyroscope helps the accelerometer out with understanding how a phone is orientated\n",
     "* A use case example can be playing a racing game using the phone and tilting the screen to steer\n",
-    "* the gyroscope rather than the accelerometer is used, because we only apply small turns to the phone and not actually moving through space."
+    "* The gyroscope rather than the accelerometer is used, because we only apply small turns to the phone and not actually moving through space."
    ]
   },
   {
@@ -128,8 +128,8 @@
    "metadata": {},
    "source": [
     "\n",
-    "* The data is divide into csv files\n",
-    "* Each file represents a trail performed by a specific participant, labeld with a specific action\n",
+    "* The data is divided into csv files\n",
+    "* Each file represents a trail performed by a specific participant, labeled with a specific action\n",
     "* We would like to load the data into a single Pandas Data Frame object with indicators <br /> for the specific participant and the action performed\n"
    ]
   },
