--- a/notebooks/Part 2 - Feature Engineering and Model Selection.ipynb
+++ b/notebooks/Part 2 - Feature Engineering and Model Selection.ipynb
@@ -29,7 +29,7 @@
     "---\n",
     "## Problem Definition and Applications\n",
     "\n",
-    "* Our probelm is predicting user's activity from phone sensors data\n",
+    "* Our problem is predicting user's activity from phone sensors data\n",
     "* This definition might be too wide, so we limit ourself to predicting 1 of 5 possible activities\n",
     "* Thus, we can define our problem as multiclass classification, where we can label each data point as <br> sitting, standing, walking, going downstaris or going upstairs \n",
     "* There are many application for this kind of classification in various fields such as <br> healthcare, intelligence etc. \n",
@@ -46,7 +46,7 @@
     "Our data is a time series - a sequence of measurements over time\n",
     "\n",
     "* Thus, extracting value for a single data point depends on it's context\n",
-    "* But, classic ML algorithms/classifiers predicts output for a single input data point - independent to adjecent input data point\n",
+    "* But, classic ML algorithms/classifiers predicts output for a single input data point - independent to adjacent input data point\n",
     "* So, in order to use our data to train classic ML model we will have to encode our features to represent context data \n",
     "* We will present two different features encoding methods - Sliding-Window and Raw-History"
    ]
@@ -57,11 +57,10 @@
    "source": [
     "### Sliding Window Features\n",
     "\n",
-    "<ul>\n",
-    "<li> In this method, we will encode each data sample as a concatenation of analytical functions calculated over a predefined size of previous samples </li>\n",
-    "<li> For example, here we will use a context size of 10 (calculate over 10 pervious data points) </li>\n",
-    "<li> Notice that we cannot mix between different expirements who represents different activity label </li>\n",
-    "</ul>"
+    "\n",
+    "* In this method, we will encode each data sample as a concatenation of analytical functions calculated over a predefined size of previous samples\n",
+    "* For example, here we will use a context size of 10 (calculate over 10 pervious data points)\n",
+    "* Notice that we cannot mix between different expirements who represents different activity label"
    ]
   },
   {
