--- a/notebooks/Part 2 - Feature Engineering and Model Selection.ipynb
+++ b/notebooks/Part 2 - Feature Engineering and Model Selection.ipynb
@@ -57,10 +57,9 @@
    "source": [
     "### Sliding Window Features\n",
     "\n",
-    "\n",
     "* In this method, we will encode each data sample as a concatenation of analytical functions calculated over a predefined size of previous samples\n",
     "* For example, here we will use a context size of 10 (calculate over 10 pervious data points)\n",
-    "* Notice that we cannot mix between different expirements who represents different activity label"
+    "* Notice that we cannot mix between different experiments who represents different activity labels"
    ]
   },
   {
@@ -429,7 +428,7 @@
     "\n",
     "* In this method, we will simply encode each data sample as a concatenation of the raw features of it's previous x data points\n",
     "* For example, here we will use a context size of 10. i.e it is aligned with our previous sliding window method, <br> but instead of calculating aggregation of analytical function over the context features, here we simply encode them as a long vector\n",
-    "* Again, we cannot mix between different expirements who represents different activity label"
+    "* Again, we cannot mix between different experiments who represents different activity label"
    ]
   },
   {
@@ -528,7 +527,7 @@
     "\n",
     "* Now we have two different encodings of our time series data as independent data points.\n",
     "* We can feed them into an ML model and evaluate the performance of our predictions \n",
-    "* First we will define a class to consolidate the functionality of splitting the data into training, development and test sets <br> and performing the evaluation using percision and recall for each activity label\n"
+    "* First we will define a class to consolidate the functionality of splitting the data into training, development and test sets <br> and performing the evaluation using precision and recall for each activity label\n"
    ]
   },
   {
