--- a/notebooks/Part 2 - Feature Engineering and Model Selection.ipynb
+++ b/notebooks/Part 2 - Feature Engineering and Model Selection.ipynb
@@ -1227,7 +1227,7 @@
     "\n",
     "* As we can see, even on our left aside test data the performance of the model is too good to be true.\n",
     "* This is a reason to suspect that although we tested our model on data was not used to train it, **we are over-fitting to the current data set as a whole**\n",
-    "* We suspect that **the generation process of the data was too \"synthetic\"**, not represeting \"real world\" data obtained from phone sensors\n",
+    "* We suspect that **the generation process of the data was too \"synthetic\"**, not representing \"real world\" data obtained from phone sensors\n",
     "* We used this experiment framework to **extract real data obtained from our activities** during the day and labeled them accordingly \n",
     "* In the next notebook we will present our model performance on our \"real world\" data and try to train more complex models to improve our performance over the real world data \n"
    ]
