--- a/notebooks/Part 3 - Evaluating on Real World Data.ipynb
+++ b/notebooks/Part 3 - Evaluating on Real World Data.ipynb
@@ -31,8 +31,8 @@
     "\n",
     "* We used the [Core Motion Framework for iOS devices](https://developer.apple.com/documentation/coremotion/cmdevicemotion) to extract sensors data from our phones\n",
     "* More details on the app we built can be found in our final document\n",
-    "* We recorded sensors data while performing different activties and extracted labeled data samples \n",
-    "* On the next section we will load our data and use it as a test set to evaluate the performace of our Random Forest model"
+    "* We recorded sensors data while performing different activities and extracted labeled data samples \n",
+    "* On the next section we will load our data and use it as a test set to evaluate the performance of our Random Forest model"
    ]
   },
   {
@@ -560,7 +560,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -754,7 +753,7 @@
     "**Conclusion:**\n",
     "* The results now look better than the naïve Random Forest.\n",
     "* We used a very simple smoothing technique with a constant factor\n",
-    "* It's reasonable to assume that more sophisticaed filters would result in even better result\n",
+    "* It's reasonable to assume that more sophisticated filters would result in even better result\n",
     "* The applicative solution works well in practice\n",
     "* We now provide the user with a prediction every 3 seconds instead of every 0.1 seconds"
    ]
