--- a/notebooks/Part 3 - Evaluating on Real World Data.ipynb
+++ b/notebooks/Part 3 - Evaluating on Real World Data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MotiononSense Dataset\n",
+    "# MotionSense Dataset\n",
     "### Problem definition: predict user's activity based on smartphone sensors data"
    ]
   },
